Fix last issues with restructuring

--- a/server/files/404.html
+++ b/server/files/404.html
@@ -6,29 +6,29 @@
 
   <link rel="stylesheet" type="text/css" href="/stylesheets/reset.css">
 
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/elements/button.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/elements/divider.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/elements/header.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/elements/icon.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/elements/label.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/elements/progress.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/elements/segment.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/elements/step.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/button.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/divider.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/header.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/icon.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/label.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/progress.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/segment.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/step.css">
 
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/collections/form.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/collections/grid.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/collections/menu.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/collections/message.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/collections/table.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/form.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/grid.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/menu.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/message.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/table.css">
 
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/views/comment.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/views/feed.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/views/item.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/comment.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/feed.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/item.css">
 
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/modules/checkbox.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/modules/dropdown.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/modules/popup.css">
-  <link rel="stylesheet" type="text/css" class="ui" href="/build/uncompressed/definitions/modules/shape.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/checkbox.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/dropdown.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/popup.css">
+  <link rel="stylesheet" type="text/css" class="ui" href="/dist/components/shape.css">
 
   <link rel="stylesheet" type="text/css" href="/stylesheets/library/sidr.css">
   <link rel="stylesheet" type="text/css" href="/stylesheets/semantic.css">
@@ -39,9 +39,9 @@
   <script src="/javascript/library/sidr.js"></script>
   <script src="/javascript/library/waypoints.js"></script>
 
-  <script src="/build/uncompressed/definitions/behaviors/state.js"></script>
-  <script src="/build/uncompressed/definitions/modules/checkbox.js"></script>
-  <script src="/build/uncompressed/definitions/modules/popup.js"></script>
+  <script src="/dist/components/behaviors/state.js"></script>
+  <script src="/dist/components/checkbox.js"></script>
+  <script src="/dist/components/popup.js"></script>
   <script src="/javascript/semantic.js"></script>
 
 </head>
