Draft of container docs

--- a/server/draft/specification/authoring.html
+++ b/server/draft/specification/authoring.html
@@ -8,7 +8,7 @@ type   : 'UI Specification'
 
 <%- @partial('header') %>
 
-<div class="main container">
+<div class="main ui container">
 
 
 <h2 class="ui header">Creating an Element</h2>
