--- a/server/draft/specification/downloading.html
+++ b/server/draft/specification/downloading.html
@@ -10,7 +10,7 @@ type   : 'UI Specification'
     <h1 class="ui header">Writing a Component</h1>
   </div>
 </div>
-<div class="main container">
+<div class="main ui container">
 
 
 <h2 class="ui header">Creating an Element</h2>
