--- a/server/draft/specification/getting-started.html
+++ b/server/draft/specification/getting-started.html
@@ -10,7 +10,7 @@ type   : 'UI Specification'
     <h1 class="ui header">Getting Started</h1>
   </div>
 </div>
-<div class="main container">
+<div class="main ui container">
 
   <h2 class="ui header">Installing</h2>
   <p>Semantic uses an eponymous package manager written in node. To begin you must <a href="http://howtonode.org/how-to-install-nodejs">install nodejs and npm</a> for your platform.</p>
