--- a/server/draft/specification/spec.html
+++ b/server/draft/specification/spec.html
@@ -8,7 +8,7 @@ type   : 'UI Specification'
 
 <%- @partial('header') %>
 
-<div class="main container">
+<div class="main ui container">
 
   <h2>Introduction</h2>
 
