--- a/server/documents/hotfix.html
+++ b/server/documents/hotfix.html
@@ -9,15 +9,22 @@ type       : 'Library'
 <!-- TEST JS HERE !-->
 <script type="text/javascript">
 $(document).ready(function() {
-    $('.tip')
+    $('.error-note')
     .popup({
+        debug: true,
         popup : $('.custom.popup'),
-        on : 'hover'
+        position: 'left center',
+        on : 'hover',
+        prefer : 'opposite'
     });
 });
 </script>
 
 <style>
+body {
+    overflow: visible;
+}
+
 .container {
     margin-top: 100px /* for demo only */
     position: relative;
@@ -29,7 +36,7 @@ $(document).ready(function() {
     left: 50%;
     margin-top: -200px;
     margin-left: -200px;
-    width: 400px;
+    width: 90%;
     height: 400px;
     background: #5B5959;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.3);
@@ -39,19 +46,20 @@ $(document).ready(function() {
 .button {
     position: absolute;
     top: 100px;
-    left: 100px;
+
+    right: 10px;
     width: 150px;
     height: 50px;
     background: #fff;
 }
-.tip {
+.error-note {
     position: absolute;
     width: 20px;
     height: 20px;
     top: -10px;
     right: -10px;
 }
-.tip:before {
+.error-note:before {
     display: inline-block;
     font: normal normal normal 14px/1 FontAwesome;
     font-size: inherit;
@@ -65,20 +73,23 @@ $(document).ready(function() {
     border-radius: 50%;
     font-size: 20px;
 }
+
+.custom.popup {
+    min-width: 200px;
+}
 </style>
 
 <div class="ui container" style="padding-top:300px;">
+<div class="container">
+    <div class="box">
+        <div class="button">button
+            <span class="error-note"></div>
+        </div>
+    </div><!-- /box -->
+</div><!-- /container -->
 
-    <div class="container">
-        <div class="box">
-            <div class="button">button
-                <span class="tip"></span>
-            </div>
-        </div><!-- /box -->
-    </div><!-- /container -->
-
-    <!-- this popup will be place anywhere -->
-    <div class="ui custom popup">
-    I'm not on the same level as the button, but i can still be found.
-    </div>
+<!-- this popup will be place anywhere -->
+<div class="ui custom popup">
+I'm not on the same level as the button, but i can still be found.
+</div>
 </div>
