Adjust color order, some examples, settings text for sidebar

--- a/server/documents/hotfix.html
+++ b/server/documents/hotfix.html
@@ -31,74 +31,72 @@ $(document).ready(function() {
 </style>
 
 <div class="ui container" style="padding-top:300px;">
-    <div class="ui pointing menu">
-      <a class="active item">
-        Home
-      </a>
-      <a class="item">
-        Messages
-      </a>
-      <a class="item">
-        Friends
-      </a>
-      <div class="right menu">
-        <div class="item">
-          <div class="ui transparent icon input">
-            <input type="text" placeholder="Search...">
-            <i class="search link icon"></i>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="ui teal inverted pointing menu">
-      <a class="active item">
-        Home
-      </a>
-      <a class="item">
-        Messages
-      </a>
-      <a class="item">
-        Friends
-      </a>
-    </div>
-    <div class="ui inverted pointing menu">
-      <a class="active item">
-        Home
-      </a>
-      <a class="item">
-        Messages
-      </a>
-    </div>
-    <div class="ui vertical pointing menu">
-      <a class="active item">
-        Home
-      </a>
-      <a class="item">
-        Messages
-      </a>
-      <div class="item">
-        Friends
-        <div class="menu">
-            <a class="item">One</a>
-            <a class="item">Two</a>
-            <a class="item">Three</a>
-        </div>
-      </div>
-    </div>
-    <div class="ui inverted vertical pointing menu">
-      <a class="active item">
-        Home
-      </a>
-      <a class="item">
-        Messages
-      </a>
-      <div class="item">
-        Friends
-        <div class="menu">
-            <a class="item">One</a>
-            <a class="item">Two</a>
-            <a class="item">Three</a>
-        </div>
-      </div>
-    </div>
+    <h2 class="ui header">
+  Columns
+</h2>
+
+<div class="ui segment">
+  <div class="ui five column stackable padded grid">
+    <div class="red column">Red</div>
+    <div class="orange column">Orange</div>
+    <div class="yellow column">Yellow</div>
+    <div class="olive column">Olive</div>
+    <div class="green column">Green</div>
+    <div class="teal column">Teal</div>
+    <div class="blue column">Blue</div>
+    <div class="violet column">Violet</div>
+    <div class="purple column">Purple</div>
+    <div class="pink column">Pink</div>
+    <div class="brown column">Brown</div>
+    <div class="black column">Black</div>
+    <div class="grey column">Grey</div>
+    <div class="white column">White</div>
+    <div class="column">Default</div>
+  </div>
+</div>
+
+<h2 class="ui header">
+  Buttons
+</h2>
+
+<div class="ui segment">
+  <button class="ui red button">Red</button>
+  <button class="ui orange button">Orange</button>
+  <button class="ui yellow button">Yellow</button>
+  <button class="ui olive button">Olive</button>
+  <button class="ui green button">Green</button>
+  <button class="ui teal button">Teal</button>
+  <button class="ui blue button">Blue</button>
+  <button class="ui violet button">Violet</button>
+  <button class="ui purple button">Purple</button>
+  <button class="ui pink button">Pink</button>
+  <button class="ui brown button">Brown</button>
+  <button class="ui black button">Black</button>
+  <button class="ui grey button">Grey</button>
+  <button class="ui white button">White</button>
+  <button class="ui button">Default</button>
+</div>
+
+<h2 class="ui header">
+  Inverted Segments
+</h2>
+
+<div class="ui segment">
+  <div class="ui inverted red segment">Red</div>
+  <div class="ui inverted orange segment">Orange</div>
+  <div class="ui inverted yellow segment">Yellow</div>
+  <div class="ui inverted olive segment">Olive</div>
+  <div class="ui inverted green segment">Green</div>
+  <div class="ui inverted teal segment">Teal</div>
+  <div class="ui inverted blue segment">Blue</div>
+  <div class="ui inverted violet segment">Violet</div>
+  <div class="ui inverted purple segment">Purple</div>
+  <div class="ui inverted pink segment">Pink</div>
+  <div class="ui inverted brown segment">Brown</div>
+  <div class="ui inverted black segment">Black</div>
+  <div class="ui inverted grey segment">Grey</div>
+  <div class="ui inverted white segment">White</div>
+  <div class="ui inverted segment">Default</div>
+</div>
+
 </div>
